Support R4 profiled protos in JsonFhirStringToProto.
PiperOrigin-RevId: 272474427

--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -345,6 +345,7 @@ cc_library(
         ":profiles",
         ":proto_util",
         ":util",
+        "//cc/google/fhir/r4:profiles",
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
         "//proto:annotations_cc_proto",
