deletes deprecated R4 protos.
Follow-up CL will drop "core" postfix from test_core.proto and test_extensions_core.proto

PiperOrigin-RevId: 273817194

--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -72,9 +72,9 @@ cc_test(
         ":extensions",
         ":test_helper",
         "//cc/google/fhir/testutil:proto_matchers",
-        "//proto/r4:extensions_cc_proto",
         "//proto/r4:google_extensions_core_cc_proto",
         "//proto/r4/core:datatypes_cc_proto",
+        "//proto/r4/core:extensions_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
         "//proto/stu3:extensions_cc_proto",
         "//testdata/stu3/profiles:test_cc_proto",
