--- a/cc/google/fhir/stu3/BUILD
+++ b/cc/google/fhir/stu3/BUILD
@@ -37,3 +37,45 @@ cc_test(
         "@org_tensorflow//tensorflow/core:test",
     ],
 )
+
+cc_library(
+    name = "profiles",
+    srcs = [
+        "profiles.cc",
+    ],
+    hdrs = ["profiles.h"],
+    strip_include_prefix = "//cc/",
+    deps = [
+        "//cc/google/fhir:profiles_lib",
+        "//cc/google/fhir/status",
+        "//cc/google/fhir/status:statusor",
+        "//proto/stu3:datatypes_cc_proto",
+        "@org_tensorflow//tensorflow/core:lib",
+        "@protobuf_archive//:protobuf",
+    ],
+)
+
+cc_test(
+    name = "profiles_test",
+    srcs = [
+        "profiles_test.cc",
+    ],
+    data = [
+        "//testdata/stu3:examples",
+        "//testdata/stu3/profiles:testdata",
+    ],
+    deps = [
+        "//cc/google/fhir:test_helper",
+        "//cc/google/fhir/status",
+        "//cc/google/fhir/status:statusor",
+        "//cc/google/fhir/stu3:profiles",
+        "//cc/google/fhir/testutil:proto_matchers",
+        "//proto/stu3:datatypes_cc_proto",
+        "//proto/stu3:extensions_cc_proto",
+        "//proto/stu3:profiles_cc_proto",
+        "//proto/stu3:resources_cc_proto",
+        "//testdata/stu3/profiles:test_cc_proto",
+        "@com_google_absl//absl/strings",
+        "@com_google_googletest//:gtest_main",
+    ],
+)
