Improves package management in Proto Generation with a FhirPackage class.  This will make it easier to consolidate package dependency management between ProtoGenerator and ValueSetGenerator.
This moves the fhir PackageInfo inside the generated FhirPackage zip, meaning all we need to pass around is the FhirPackage.

PiperOrigin-RevId: 277618738

--- a/java/BUILD
+++ b/java/BUILD
@@ -15,11 +15,12 @@ java_library(
             "src/main/java/com/google/fhir/stu3/AnnotationUtils.java",
             "src/main/java/com/google/fhir/stu3/ProtoGenerator.java",
             "src/main/java/com/google/fhir/stu3/ValueSetGenerator.java",
+            "src/main/java/com/google/fhir/stu3/GeneratorUtils.java",
+            "src/main/java/com/google/fhir/stu3/FhirPackage.java",
         ],
     ),
     deps = [
         ":common",
-        ":structure_definition_transformer",
         "//external:gson",
         "//external:guava",
         "//proto/stu3:codes_java_proto",
@@ -169,6 +170,7 @@ java_library(
         "//proto/r4/core:extensions_java_proto",
         "//proto/r4/core/resources:bundle_and_contained_resource_java_proto",
         "//proto/r4/core/resources:patient_java_proto",
+        "//proto/r4/core/resources:structure_definition_java_proto",
         "@com_google_protobuf//:protobuf_java",
     ],
 )
@@ -533,8 +535,8 @@ java_test(
     data = [
         "//proto/r4/core:testdata",
         "//proto/r4/core/resources:testdata",
-        "//spec:fhir_r4_definitions.zip",
-        "//spec:fhir_r4_definitions_filegroup",
+        "//spec:fhir_r4_package.zip",
+        "//spec:fhir_r4_package_filegroup",
         "//testdata/r4:descriptors",
     ],
     test_class = "com.google.fhir.stu3.ProtoFilePrinterTest",
@@ -542,7 +544,6 @@ java_test(
         ":ProtoGeneratorTest",
         ":proto_generator_lib",
         ":stu3",
-        "//external:gson",
         "//external:guava",
         "//proto/stu3:datatypes_java_proto",
         "//proto/stu3:extensions_java_proto",
@@ -566,20 +567,20 @@ java_test(
     size = "medium",
     srcs = ["src/test/java/com/google/fhir/stu3/ProtoGeneratorTest.java"],
     data = [
-        "//spec:fhir_r4_definitions.zip",
-        "//spec:fhir_r4_definitions_filegroup",
-        "//spec:fhir_stu3_definitions_filegroup",
-        "//spec:uscore_stu3_definitions_filegroup",
+        "//spec:fhir_r4_package.zip",
+        "//spec:fhir_r4_package_filegroup",
+        "//spec:fhir_stu3_package_filegroup",
+        "//spec:uscore_stu3_package_filegroup",
         "//testdata/r4:descriptors",
         "//testdata/stu3:descriptors",
         "//testdata/stu3:google",
     ],
     test_class = "com.google.fhir.stu3.ProtoGeneratorTest",
     deps = [
+        ":generator_utils",
         ":proto_generator_lib",
         ":stu3",
         ":value_set_generator_lib",
-        "//external:gson",
         "//external:guava",
         "//proto/stu3:datatypes_java_proto",
         "//proto/stu3:profile_config_java_proto",
@@ -634,6 +635,7 @@ java_library(
     srcs = ["src/main/java/com/google/fhir/stu3/ProtoGenerator.java"],
     deps = [
         ":common",
+        ":generator_utils",
         ":stu3",
         ":value_set_generator_lib",
         "//external:guava",
@@ -656,7 +658,6 @@ java_binary(
     srcs = ["src/main/java/com/google/fhir/examples/ProtoGeneratorMain.java"],
     main_class = "com.google.fhir.examples.ProtoGeneratorMain",
     deps = [
-        ":common",
         ":generator_utils",
         ":proto_generator_lib",
         ":structure_definition_transformer",
@@ -681,7 +682,6 @@ java_library(
     deps = [
         ":common",
         ":stu3",
-        "//external:gson",
         "//external:guava",
         "//proto/stu3:profile_config_java_proto",
         "//proto/stu3:profiles_java_proto",
@@ -701,7 +701,7 @@ java_test(
     testonly = 1,
     srcs = ["src/test/java/com/google/fhir/profile/ProfileGeneratorTest.java"],
     data = [
-        "//spec:fhir_stu3_definitions_filegroup",
+        "//spec:fhir_stu3_package_filegroup",
         "//testdata/stu3:profilegenerator",
     ],
     test_class = "com.google.fhir.profile.ProfileGeneratorTest",
@@ -724,15 +724,16 @@ java_binary(
     srcs = ["src/main/java/com/google/fhir/profile/ProfileGeneratorMain.java"],
     main_class = "com.google.fhir.profile.ProfileGeneratorMain",
     deps = [
+        ":generator_utils",
         ":profile_generator_lib",
         ":stu3",
         "//external:guava",
         "//proto/stu3:profile_config_java_proto",
+        "//proto:annotations_java_proto",
         "//proto/r4/core:extensions_java_proto",
         "//proto/r4/core/resources:bundle_and_contained_resource_java_proto",
         "//proto/r4/core/resources:structure_definition_java_proto",
         "@com_beust_jcommander//jar",
-        "@com_google_protobuf//:protobuf_java",
     ],
 )
 
@@ -762,6 +763,7 @@ java_binary(
     srcs = ["src/main/java/com/google/fhir/examples/ValueSetGeneratorMain.java"],
     main_class = "com.google.fhir.examples.ValueSetGeneratorMain",
     deps = [
+        ":generator_utils",
         ":stu3",
         ":value_set_generator_lib",
         "//external:guava",
@@ -778,8 +780,20 @@ java_binary(
 
 java_library(
     name = "generator_utils",
-    srcs = ["src/main/java/com/google/fhir/stu3/GeneratorUtils.java"],
+    srcs = [
+        "src/main/java/com/google/fhir/stu3/FhirPackage.java",
+        "src/main/java/com/google/fhir/stu3/GeneratorUtils.java",
+    ],
     deps = [
+        ":structure_definition_transformer",
+        ":stu3",
         "//external:guava",
+        "//proto/stu3:profile_config_java_proto",
+        "//proto:annotations_java_proto",
+        "//proto/r4/core/resources:bundle_and_contained_resource_java_proto",
+        "//proto/r4/core/resources:code_system_java_proto",
+        "//proto/r4/core/resources:structure_definition_java_proto",
+        "//proto/r4/core/resources:value_set_java_proto",
+        "@com_google_protobuf//:protobuf_java",
     ],
 )
