Exposes function in codes.h for converting string code to enum value for a given enum set, and memoizes the results.
PiperOrigin-RevId: 277821351

--- a/cc/google/fhir/BUILD
+++ b/cc/google/fhir/BUILD
@@ -18,6 +18,7 @@ cc_library(
         "//proto/r4/core:datatypes_cc_proto",
         "//proto/stu3:codes_cc_proto",
         "//proto/stu3:datatypes_cc_proto",
+        "@com_google_absl//absl/strings",
         "@protobuf_archive//:protobuf",
     ],
 )
