--- a/proto/r4/core/resources/BUILD
+++ b/proto/r4/core/resources/BUILD
@@ -9,6 +9,7 @@ licenses(["notice"])
 RESOURCE_DEPS = [
     "//proto/r4/core:codes_proto",
     "//proto/r4/core:datatypes_proto",
+    "//proto/r4/core:valuesets_proto",
     "//proto:annotations_proto",
     "@protobuf_archive//:any_proto",
 ]
