--- a/proto/r4/BUILD
+++ b/proto/r4/BUILD
@@ -37,6 +37,7 @@ fhir_proto_library(
         "//proto:annotations_proto",
         "//proto/r4/core:codes_proto",
         "//proto/r4/core:datatypes_proto",
+        "//proto/r4/core:valuesets_proto",
     ],
     proto_library_prefix = "uscore",
 )
