--- a/cc/google/fhir/stu3/BUILD
+++ b/cc/google/fhir/stu3/BUILD
@@ -65,15 +65,16 @@ cc_test(
         "//testdata/stu3/profiles:testdata",
     ],
     deps = [
+        ":profiles",
         "//cc/google/fhir:test_helper",
         "//cc/google/fhir/status",
         "//cc/google/fhir/status:statusor",
-        "//cc/google/fhir/stu3:profiles",
         "//cc/google/fhir/testutil:proto_matchers",
         "//proto/stu3:datatypes_cc_proto",
         "//proto/stu3:extensions_cc_proto",
         "//proto/stu3:profiles_cc_proto",
         "//proto/stu3:resources_cc_proto",
+        "//proto/stu3:uscore_cc_proto",
         "//testdata/stu3/profiles:test_cc_proto",
         "@com_google_absl//absl/strings",
         "@com_google_googletest//:gtest_main",
