--- a/proto/BUILD
+++ b/proto/BUILD
@@ -9,7 +9,7 @@ load("//bazel:proto.bzl", "fhir_proto_library")
 fhir_proto_library(
     srcs = ["annotations.proto"],
     proto_deps = [
-        "@protobuf_archive//:descriptor_proto",
+        "@com_google_protobuf//:descriptor_proto",
     ],
     proto_library_prefix = "annotations",
 )
@@ -17,7 +17,7 @@ fhir_proto_library(
 fhir_proto_library(
     srcs = ["protogenerator_annotations.proto"],
     proto_deps = [
-        "@protobuf_archive//:descriptor_proto",
+        "@com_google_protobuf//:descriptor_proto",
     ],
     proto_library_prefix = "protogenerator_annotations",
 )
