--- a/proto/r4/core/profiles/BUILD
+++ b/proto/r4/core/profiles/BUILD
@@ -12,7 +12,7 @@ RESOURCE_DEPS = [
     "//proto/r4/core:extensions_proto",
     "//proto/r4/core:valuesets_proto",
     "//proto:annotations_proto",
-    "@protobuf_archive//:any_proto",
+    "@com_google_protobuf//:any_proto",
 ]
 
 fhir_proto_library(
