--- a/py/google/fhir/testutil/BUILD
+++ b/py/google/fhir/testutil/BUILD
@@ -6,7 +6,7 @@ py_library(
     name = "protobuf_compare",
     srcs = ["protobuf_compare.py"],
     deps = [
-        "@protobuf_archive//:protobuf_python",
+        "@com_google_protobuf//:protobuf_python",
         "@six_archive//:six",
     ],
 )
