--- a/proto/r4/BUILD
+++ b/proto/r4/BUILD
@@ -33,7 +33,7 @@ fhir_proto_library(
     ],
     proto_deps = [
         ":uscore_codes_proto",
-        "@protobuf_archive//:any_proto",
+        "@com_google_protobuf//:any_proto",
         "//proto:annotations_proto",
         "//proto/r4/core:codes_proto",
         "//proto/r4/core:datatypes_proto",
