--- a/proto/r4/core/resources/BUILD
+++ b/proto/r4/core/resources/BUILD
@@ -11,7 +11,7 @@ RESOURCE_DEPS = [
     "//proto/r4/core:datatypes_proto",
     "//proto/r4/core:valuesets_proto",
     "//proto:annotations_proto",
-    "@protobuf_archive//:any_proto",
+    "@com_google_protobuf//:any_proto",
 ]
 
 fhir_proto_library(
