--- a/py/google/fhir/models/BUILD
+++ b/py/google/fhir/models/BUILD
@@ -1,9 +1,5 @@
-package(default_visibility = ["//visibility:public"])
-
-licenses(["notice"])
-
 load(
-    "@io_bazel_rules_python//python:python.bzl",
+    "@rules_python//python:python.bzl",
     "py_binary",
     "py_library",
     "py_test",
@@ -11,7 +7,11 @@ load(
 
 load("@fhir_bazel_pip_dependencies//:requirements.bzl", "requirement")
 
-# @io_bazel_rules_python may not be able to pull in transitive dependency correctly
+package(default_visibility = ["//visibility:public"])
+
+licenses(["notice"])
+
+# @rules_python may not be able to pull in transitive dependency correctly
 # (related issues: https://github.com/bazelbuild/rules_python/pull/90,
 #  https://github.com/bazelbuild/rules_python/pull/108). One would still need to run
 # pip install -r bazel/requirements.txt before running bazel on these targets.
@@ -23,7 +23,7 @@ py_library(
         "test_utils.py",
     ],
     deps = [
-        "@protobuf_archive//:protobuf_python",
+        "@com_google_protobuf//:protobuf_python",
         requirement("tensorflow"),
     ],
 )
